--- a/src/PingPong/TimelinesView.xaml
+++ b/src/PingPong/TimelinesView.xaml
@@ -24,6 +24,8 @@
                 <ToggleButton Width="80"
                               cal:Bind.Model="PingPong.StatusViewModel"
                               Content="Status"
+                              FontFamily="{StaticResource DefaultFontFamily}"
+                              FontSize="13.333"
                               Foreground="#FF448FBE"
                               IsChecked="{Binding IsOpen, Mode=TwoWay}"
                               Padding="5,2"
@@ -31,12 +33,16 @@
                 <ToggleButton x:Name="ShowHome"
                               Width="80"
                               Content="Home"
+                              FontFamily="{StaticResource DefaultFontFamily}"
+                              FontSize="13.333"
                               Foreground="#FF448FBE"
                               Padding="5,2"
                               Style="{StaticResource SimpleToggleButtonStyle}" />
                 <ToggleButton x:Name="ShowMentions"
                               Width="80"
                               Content="Mentions"
+                              FontFamily="{StaticResource DefaultFontFamily}"
+                              FontSize="13.333"
                               Foreground="#FF448FBE"
                               Padding="5,2"
                               Style="{StaticResource SimpleToggleButtonStyle}" />
@@ -49,10 +55,13 @@
                          Background="Transparent"
                          BorderBrush="#FF0B2739"
                          CaretBrush="White"
+                         FontFamily="{StaticResource DefaultFontFamily}"
                          Foreground="#FF448FBE" />
                 <ToggleButton x:Name="Streaming"
                               Width="80"
                               Content="Stream"
+                              FontFamily="{StaticResource DefaultFontFamily}"
+                              FontSize="13.333"
                               Foreground="#FF448FBE"
                               Padding="5,2"
                               Style="{StaticResource SimpleToggleButtonStyle}" />
