--- a/src/PingPong/Assets/DarkTweetsPanel.xaml
+++ b/src/PingPong/Assets/DarkTweetsPanel.xaml
@@ -4,6 +4,7 @@
                     xmlns:conv="clr-namespace:PingPong.Converters"
                     xmlns:ctrl="clr-namespace:PingPong.Controls"
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                    xmlns:ed="http://schemas.microsoft.com/expression/2010/drawing"
                     xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
                     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -326,6 +327,86 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <Style x:Key="ArrowButtonStyle" TargetType="Button">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Grid x:Name="grid" RenderTransformOrigin="0.5,0.5">
+                        <Grid.RenderTransform>
+                            <CompositeTransform />
+                        </Grid.RenderTransform>
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="MouseOver">
+
+                                    <Storyboard>
+                                        <ColorAnimation d:IsOptimized="True"
+                                                        Duration="0"
+                                                        Storyboard.TargetName="path"
+                                                        Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)"
+                                                        To="#FF939393" />
+                                    </Storyboard>
+
+                                </VisualState>
+                                <VisualState x:Name="Pressed">
+
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="grid" Storyboard.TargetProperty="(FrameworkElement.Margin)">
+                                            <DiscreteObjectKeyFrame KeyTime="0">
+                                                <DiscreteObjectKeyFrame.Value>
+                                                    <Thickness>1</Thickness>
+                                                </DiscreteObjectKeyFrame.Value>
+                                            </DiscreteObjectKeyFrame>
+                                        </ObjectAnimationUsingKeyFrames>
+                                        <DoubleAnimation d:IsOptimized="True"
+                                                         Duration="0"
+                                                         Storyboard.TargetName="grid"
+                                                         Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateX)"
+                                                         To="0" />
+                                        <DoubleAnimation d:IsOptimized="True"
+                                                         Duration="0"
+                                                         Storyboard.TargetName="grid"
+                                                         Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)"
+                                                         To="0" />
+                                        <DoubleAnimation d:IsOptimized="True"
+                                                         Duration="0"
+                                                         Storyboard.TargetName="grid"
+                                                         Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)"
+                                                         To="0.9" />
+                                        <DoubleAnimation d:IsOptimized="True"
+                                                         Duration="0"
+                                                         Storyboard.TargetName="grid"
+                                                         Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)"
+                                                         To="0.9" />
+
+                                    </Storyboard>
+
+                                </VisualState>
+                                <VisualState x:Name="Disabled" />
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <Path x:Name="path"
+                              Width="9"
+                              Height="11"
+                              Margin="3,0"
+                              Data="M5.0000005,0 L10.000001,12 L1.169795E-08,12 z"
+                              Fill="#FF565656"
+                              RenderTransformOrigin="0.499999951731391,0.5"
+                              Stretch="Fill"
+                              Stroke="Black"
+                              StrokeThickness="0"
+                              UseLayoutRounding="False">
+                            <Path.RenderTransform>
+                                <CompositeTransform Rotation="90" />
+                            </Path.RenderTransform>
+                        </Path>
+                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
     <Style x:Key="DarkTweetsPanel" TargetType="ItemsControl">
         <Setter Property="Background" Value="#FF181818" />
@@ -373,6 +454,23 @@
                                 Foreground="Gray"
                                 Style="{StaticResource CloseButtonStyle}"
                                 Visibility="{Binding CanClose, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <Button Grid.Row="2"
+                                Width="16"
+                                Margin="25,0,0,0"
+                                HorizontalAlignment="Left"
+                                Style="{StaticResource ArrowButtonStyle}"
+                                d:LayoutOverrides="GridBox">
+                            <Button.RenderTransform>
+                                <CompositeTransform ScaleX="-1" />
+                            </Button.RenderTransform>
+                        </Button>						
+                        <Button Grid.Row="2"
+                                Width="16"
+                                Margin="25,0,0,0"
+                                HorizontalAlignment="Left"
+                                RenderTransformOrigin="0.5,0.5"
+                                Style="{StaticResource ArrowButtonStyle}"
+                                d:LayoutOverrides="GridBox" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
