--- a/src/PingPong/StatusView.xaml
+++ b/src/PingPong/StatusView.xaml
@@ -10,6 +10,75 @@
              mc:Ignorable="d">
     <UserControl.Resources>
         <conv:CharactersRemainingConverter x:Key="CharactersRemainingConverter" />
+        <Style x:Key="TextBoxStyle" TargetType="TextBox">
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="Background" Value="#FFFFFFFF" />
+            <Setter Property="Foreground" Value="#FF000000" />
+            <Setter Property="Padding" Value="2" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="TextBox">
+                        <Grid x:Name="RootElement">
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+                                    <VisualState x:Name="Normal" />
+                                    <VisualState x:Name="MouseOver" />
+                                    <VisualState x:Name="Disabled" />
+                                    <VisualState x:Name="ReadOnly" />
+                                </VisualStateGroup>
+                                <VisualStateGroup x:Name="FocusStates">
+                                    <VisualState x:Name="Focused">
+                                        <Storyboard>
+                                            <DoubleAnimation Duration="0" Storyboard.TargetName="FocusVisualElement" Storyboard.TargetProperty="Opacity" To="1" />
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="Unfocused">
+                                        <Storyboard>
+                                            <DoubleAnimation Duration="0" Storyboard.TargetName="FocusVisualElement" Storyboard.TargetProperty="Opacity" To="0" />
+                                        </Storyboard>
+                                    </VisualState>
+                                </VisualStateGroup>
+                                <VisualStateGroup x:Name="ValidationStates">
+                                    <VisualState x:Name="Valid" />
+                                    <VisualState x:Name="InvalidUnfocused" />
+                                    <VisualState x:Name="InvalidFocused" />
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                            <Border x:Name="Border"
+                                    Background="{TemplateBinding Background}"
+                                    BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    CornerRadius="1"
+                                    Opacity="1">
+                                <Grid>
+                                    <Border x:Name="ReadOnlyVisualElement" Background="#5EC9C9C9" Opacity="0" />
+                                    <Border x:Name="MouseOverBorder" BorderBrush="Transparent" BorderThickness="1">
+                                        <ScrollViewer x:Name="ContentElement" BorderThickness="0" IsTabStop="False" Padding="{TemplateBinding Padding}" />
+                                    </Border>
+                                </Grid>
+                            </Border>
+                            <Border x:Name="DisabledVisualElement"
+                                    Background="#A5F7F7F7"
+                                    BorderBrush="#A5F7F7F7"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    IsHitTestVisible="False"
+                                    Opacity="0" />
+                            <Border x:Name="FocusVisualElement"
+                                    Margin="1"
+                                    BorderBrush="#FF6DBDD1"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    IsHitTestVisible="False"
+                                    Opacity="0" />
+                            <Border x:Name="ValidationErrorElement"
+                                    BorderBrush="#FFDB000C"
+                                    BorderThickness="1"
+                                    CornerRadius="1"
+                                    Visibility="Collapsed" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </UserControl.Resources>
     <Border Background="#FF1F1F1F"
             BorderBrush="{StaticResource TweetTextBrush}"
@@ -25,8 +94,8 @@
                        VerticalAlignment="Bottom"
                        FontSize="60"
                        FontWeight="Bold"
-                       Foreground="{Binding Text, ElementName=StatusText, Converter={StaticResource IsValidTweetLengthToColorConverter}}"
-                       Text="{Binding Text, ElementName=StatusText, Converter={StaticResource CharactersRemainingConverter}}" />
+                       Foreground="{Binding Text, Converter={StaticResource IsValidTweetLengthToColorConverter}, ElementName=StatusText}"
+                       Text="{Binding Text, Converter={StaticResource CharactersRemainingConverter}, ElementName=StatusText}" />
             <TextBox x:Name="StatusText"
                      Width="300"
                      Height="100"
@@ -38,6 +107,7 @@
                      FontFamily="{StaticResource DefaultFontFamily}"
                      FontSize="14"
                      Foreground="#FF8EBCE7"
+                     Style="{StaticResource TextBoxStyle}"
                      Text="{Binding StatusText, Mode=TwoWay}"
                      TextWrapping="Wrap">
                 <i:Interaction.Behaviors>
