--- a/src/PingPong/Assets/ToolBar.xaml
+++ b/src/PingPong/Assets/ToolBar.xaml
@@ -1,15 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:cal="http://www.caliburnproject.org"
-                    xmlns:conv="clr-namespace:PingPong.Converters"
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                     xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     mc:Ignorable="d">
-    <Style x:Key="SimpleToggleButtonStyle" TargetType="ToggleButton">
+    <Style x:Key="SimpleToggleButtonStyle" TargetType="ButtonBase">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="ToggleButton">
+                <ControlTemplate TargetType="ButtonBase">
                     <Grid>
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="CommonStates">
