--- a/src/PingPong/Assets/DarkTweetsPanel.xaml
+++ b/src/PingPong/Assets/DarkTweetsPanel.xaml
@@ -331,7 +331,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Grid x:Name="grid" RenderTransformOrigin="0.5,0.5">
+                    <Grid x:Name="grid" Background="Transparent" RenderTransformOrigin="0.5,0.5">
                         <Grid.RenderTransform>
                             <CompositeTransform />
                         </Grid.RenderTransform>
@@ -457,6 +457,8 @@
                                 Width="16"
                                 Margin="25,0,0,0"
                                 HorizontalAlignment="Left"
+                                cal:Action.TargetWithoutContext="PingPong.TimelinesViewModel"
+                                cal:Message.Attach="MoveLeft($dataContext)"
                                 Style="{StaticResource ArrowButtonStyle}"
                                 d:LayoutOverrides="GridBox">
                             <Button.RenderTransform>
@@ -467,6 +469,8 @@
                                 Width="16"
                                 Margin="25,0,0,0"
                                 HorizontalAlignment="Left"
+                                cal:Action.TargetWithoutContext="PingPong.TimelinesViewModel"
+                                cal:Message.Attach="MoveRight($dataContext)"
                                 RenderTransformOrigin="0.5,0.5"
                                 Style="{StaticResource ArrowButtonStyle}"
                                 d:LayoutOverrides="GridBox" />
