convert date refresh to a behavior

--- a/src/PingPong/TimelinesView.xaml
+++ b/src/PingPong/TimelinesView.xaml
@@ -89,6 +89,7 @@
                     <ItemsControl ItemsSource="{Binding Value}" Style="{StaticResource DarkTweetsPanel}">
                         <i:Interaction.Behaviors>
                             <b:AutoSizeBehavior ItemsControl="{Binding ElementName=Timelines}" />
+                            <b:RefreshDateBehavior />
                         </i:Interaction.Behaviors>
                     </ItemsControl>
                 </DataTemplate>
