--- a/src/PingPong/TimelinesView.xaml
+++ b/src/PingPong/TimelinesView.xaml
@@ -52,6 +52,7 @@
             <StackPanel Grid.Column="1" HorizontalAlignment="Right" Orientation="Horizontal">
                 <TextBox x:Name="SearchText"
                          Width="200"
+                         Margin="0,0,0,1"
                          HorizontalAlignment="Right"
                          Background="Transparent"
                          BorderBrush="#FF0B2739"
