wrap tweetcollection with a tweetspanelviewmodel, which itself is a CM screen

--- a/src/PingPong/Assets/DarkTweetsPanel.xaml
+++ b/src/PingPong/Assets/DarkTweetsPanel.xaml
@@ -451,7 +451,7 @@
                                    FontFamily="{StaticResource DefaultFontFamily}"
                                    FontSize="18"
                                    Foreground="{StaticResource TimelineHeaderBrush}"
-                                   Text="{Binding Description}" />
+                                   Text="{Binding DisplayName}" />
                         <Button x:Name="TryClose"
                                 Grid.Row="2"
                                 Width="12"
